// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Availability /> should not render by default if state is "ok" 1`] = `<DocumentFragment />`;

exports[`<Availability /> should not render when text is empty 1`] = `<DocumentFragment />`;

exports[`<Availability /> should render if state is "ok" when "showWhenAvailable" is set 1`] = `
<DocumentFragment>
  <div
    class="ui-shared__availability sg-tq70j6-base-stateOk"
    data-test-id="availabilityText: Available"
  >
    Available
  </div>
</DocumentFragment>
`;

exports[`<Availability /> should render if state is "warning" 1`] = `
<DocumentFragment>
  <div
    class="ui-shared__availability sg-qjuldc-base-stateWarning"
    data-test-id="availabilityText: Only 5 left"
  >
    Only 5 left
  </div>
</DocumentFragment>
`;

exports[`<Availability /> should render if state is "warning" 2`] = `
<DocumentFragment>
  <div
    class="ui-shared__availability sg-1ra5qp2-base-stateAlert"
    data-test-id="availabilityText: Out of stock"
  >
    Out of stock
  </div>
</DocumentFragment>
`;
